--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ license = "BSD-2-Clause"
 toml = "0.5.1"
 serde = { version = "1.0", features = ["derive"] }
 structopt = "0.2.18"
+regex = "1.5.4"
